Cambios necesarios para devolver el token en respustas de autenticación para poder usarlo en documentación de swagger
